--- a/Application/src/RazorPagesTestSample/Pages/Index.cshtml
+++ b/Application/src/RazorPagesTestSample/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Message System";
+    ViewData["Title"] = "Amazing Message System";
 }
 
 <h1>@ViewData["Title"]</h1>
